--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Template Name"
+      content="ez budget"
     />
-    <title>Template Name</title>
+    <title>ez budget</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
